<resources>
    <string name="email_hint">Email</string>
    <string name="app_name">AndroidPractice</string>
    <string name="hint_name">Name</string>
    <string name="password_hint">Password</string>
    <string name="error">Invalid</string>
    <string name="alias">Your alias will be: @%s</string>
    <string name="gender_title">Choose your gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="other">Other</string>
    <string name="notifications">Notifications</string>
    <string name="main_change">Change</string>
    <string name="name_format">Hello, %s</string>
    <string name="email_format">Email: %s</string>
    <string name="notifications_enabled">Notifications:  Enabled</string>
    <string name="notifications_disabled">Notifications: Disabled</string>
    <string name="gender_format">Gender: %s</string>
    <string name="submit">Submit</string>
    <string name="login_error">Data is invalid</string>
</resources>
